--- a/ECommerce/ECommerce.Api.Search/appsettings.json
+++ b/ECommerce/ECommerce.Api.Search/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Services": {
+    "Customers": "http://localhost:41741",
+    "Orders": "http://localhost:33409",
+    "Products": "http://localhost:61730"
+  }
 }
