--- a/ECommerce/ECommerce.Api.Orders/ECommerce.Api.Orders.csproj
+++ b/ECommerce/ECommerce.Api.Orders/ECommerce.Api.Orders.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.31" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.31" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
   </ItemGroup>
 
 
