--- a/ECommerce/ECommerce.Api.Search/ECommerce.Api.Search.csproj
+++ b/ECommerce/ECommerce.Api.Search/ECommerce.Api.Search.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.31" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
   </ItemGroup>
 
 
